--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<div class="socials">
-  <a href="#" class="social-icon" data-label="X">
-    <i class="fab fa-x-twitter"></i>
-  </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Hover Tooltip Test</title>
+  <link rel="stylesheet" href="style.css">
 
-  <a href="#" class="social-icon" data-label="Instagram">
-    <i class="fab fa-instagram"></i>
-  </a>
+  <!-- Font Awesome for icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
 
-  <a href="#" class="social-icon" data-label="Dribbble">
-    <i class="fab fa-dribbble"></i>
-  </a>
+  <div class="socials">
+    <a href="#" class="social-icon" data-label="X">
+      <i class="fab fa-x-twitter"></i>
+    </a>
 
-  <a href="#" class="social-icon" data-label="Threads">
-    <i class="fab fa-threads"></i>
-  </a>
+    <a href="#" class="social-icon" data-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
 
-  <a href="#" class="social-icon" data-label="LinkedIn">
-    <i class="fab fa-linkedin-in"></i>
-  </a>
-</div>
+    <a href="#" class="social-icon" data-label="LinkedIn">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+  </div>
+
+</body>
+</html>
